# experiments

001/: .prettierrc  README.md  package-lock.json  package.json  tailwind.config.cjs
001/src/: app.css  app.html
005/: README.md  package-lock.json  package.json
005/src/: App.jsx
006/: README.md
007/: README.md
add-owner/: Cargo.toml
add-owner/src/: main.rs
flowstation/: .eslintrc.js  hardhat.config.ts  package-lock.json  package.json
flowstation/contracts/: BulkTransfer.sol  FlowStation.sol  FlowStationWorkflowModule.sol  GnosisSafe.sol  IFlowStationWorkflowModule.sol  SimpleUniswapV3.sol
flowstation/hardhat/: .solhint.json  hardhat.config.ts  package-lock.json  package.json
flowstation/scripts/: index.ts
flowstation/test/: bulk-transfer.test.ts  flow-station-workflow-module.ts  helpers.ts
install-multisig/: Cargo.toml
multisig-test/: Cargo.toml
send-usdt-web3-metamask/: README.md  package-lock.json  package.json  utils.js
smart-contracts/: README.MD  context.sol  erc20.sol  multisig.sol  safe-math.sol  timelock-creator.sol  timelock.sol
solana-safe/program/: Cargo.toml
solana-safe/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-transfer/: Cargo.toml
solana-transfer/src/: processor.rs
token-gating/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
verify-erc20-transfer-cli/: Cargo.toml
verify-erc20-transfer-cli/src/: SimpleEvent.sol  main.rs
verify-erc20-transfer-cli/src/erc20/: erc20-interface.sol  erc20-metadata.sol
workflow/: .gitignore  safe.txt
(+350 files in other folders)
