[package]
name = "erc20"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.17.0", default-features = false, features = [
  "http-rustls-tls",
  "ws-tls-tokio",
] }
tokio = { version = "1.13.0", features = ["full"] }
hex-literal = "0.3.3"
env_logger = "0.9"
clap = "2.33.3"
hex = "0.4.3"
