[package]
name = "solana-safe"
version = "1.0.0"
description = "Solana Safe"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.8.1"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
